library/database_universe/test/errors/index/property_does_not_exist.dart
// property does not exist

import 'package:database_universe/database_universe.dart';

@collection
class Model {
  late int id;

  @Index(composite: ['myProp'])
  int? value;
}
